Código previo a cambiar manejo de filas incorporándolas al formulario reactivo

--- a/src/app/components/indicad-venta-acum/indicad-ventaacum.component.html
+++ b/src/app/components/indicad-venta-acum/indicad-ventaacum.component.html
@@ -64,7 +64,7 @@
   </div>
 
 
-  <div *ngIf="bBandera" class="table-responsive container">
+  <div *ngIf="bBandera" class="table-responsive container float-left">
     <!-- <div class="container" >      -->
 
     <br>
