--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -104,6 +104,8 @@
                   class="font_side">Consulta de precios</span></a>
               <a mat-list-item [routerLink]="['/asesores/cotizacion/']" routerLinkActive="active-list-item"><span
                   class="font_side">Cotización de Ventas</span></a>
+              <a mat-list-item [routerLink]="['/asesores/cotizcrear/']" routerLinkActive="active-list-item"><span
+                  class="font_side">Crear Cotización</span></a>
             </div>
           </div>
           <!-- Grupo Pedidos -->
@@ -165,10 +167,14 @@
           <a mat-list-item [routerLink]="['/asesores/consultaexistencias/']" routerLinkActive="active-list-item"><span
               class="font_side">Consulta de Existencias</span></a>
 
+          <a mat-list-item [routerLink]="['/asesores/articulosreporte/']" routerLinkActive="active-list-item"><span
+              class="font_side">Catálogo de Artículos</span></a>
+
         </div>
 
-        <a mat-list-item [routerLink]="['/asesores/articulosreporte/']" routerLinkActive="active-list-item"><span
-            class="font_side">Catálogo de Artículos</span></a>
+        <a mat-list-item [routerLink]="['/asesores/testdr/']" routerLinkActive="active-list-item"><span
+            class="font_side">Test Cotizaciones</span></a>
+
       </mat-nav-list>
 
       <!-- =============================================================== -->
