--- a/src/app/components/cotiz-crear/cotiz-crear.component.html
+++ b/src/app/components/cotiz-crear/cotiz-crear.component.html
@@ -11,18 +11,17 @@
 
         <div class="row">
 
-          <!------------ Seleccionar cliente ------------>
-          <!--------------- Casillas para indicar código de cliente -------------->
+          <!--------- Casillas para indicar código de cliente -------->
           <div class="col-md-6">
             <div class="row mb-2">
               <div class="col-md-4">
-                <label for="" class="CamposFonelli">Número</label>
-                <input type="number" class="form-control" formControlName="ClienteCodigo" [readonly]="bCliente"
-                  placeholder="Número">
+                <label for="ClienteCodigo" class="CamposFonelli">Número</label>
+                <input type="number" class="form-control" formControlName="ClienteCodigo" id="ClienteCodigo"
+                  placeholder="Número" [readonly]="bCliente">
               </div>
               <div class="col-md-4">
-                <label for="idClienteFilial" class="CamposFonelli">Filial</label>
-                <input type="number" class="form-control" formControlName="ClienteFilial" id="idClienteFilial"
+                <label for="ClienteFilial" class="CamposFonelli">Filial</label>
+                <input type="number" class="form-control" formControlName="ClienteFilial" id="ClienteFilial"
                   placeholder="Filial" [readonly]="bCliente">
               </div>
               <div class="col-md-4 d-flex flex-column no-imprimir">
@@ -31,34 +30,22 @@
                 </button>
               </div>
             </div>
-            <!---------------- Información del cliente ------------->
-            <!--
-                <div class="row mb-1">
-                  <div class="col-md-12">
-                    <input type="text" class="form-control font-negrita" formControlName="ClienteNombre"
-                      placeholder="nombre cliente" readonly>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12">
-                    <input type="text" class="form-control font-negrita" formControlName="ClienteSucursal"
-                      placeholder="nombre sucursal" readonly>
-                  </div>
-                </div>
-                -->
+
+            <!---------------- Información del cliente -------------->
             <div class="row mb-1">
               <div class="col-md-12">
-                <textarea class="form-control fw-bold" formControlName="txtDatosCliente" placeholder="Datos del cliente"
-                  readonly>
-                    </textarea>
+                <textarea class="form-control fw-bold" formControlName="txtDatosCliente" id="txtDatosCliente"
+                  placeholder="Datos del cliente" readonly>
+                </textarea>
               </div>
             </div>
+
             <!--------- Mensajes relacionados con el cliente -------->
             <div class="alert alert-warning mt-2 font-negrita no-imprimir" role="alert" *ngIf="mostrarMensajeClientes">
               {{ txtMensajeClientes }}
             </div>
 
-          </div> <!-- información del cliente -->
+          </div> <!-- Casillas para indicar código de cliente -->
 
           <!--------------- Datos generales del documento ----------->
           <div class="col-md-6">
@@ -70,7 +57,7 @@
                 <div class="CamposFonelli">Folio</div>
               </div>
               <div class="col-md-4">
-                <input type="text" class="form-control" formControlName="Folio" placeholder="Nuevo" readonly>
+                <input type="text" class="form-control" formControlName="Folio" id="Folio" placeholder="Nuevo" readonly>
               </div>
             </div>
             <div class="row mb-1">
@@ -79,7 +66,7 @@
                 <div class="CamposFonelli">Fecha</div>
               </div>
               <div class="col-md-4">
-                <input type="date" class="form-control" formControlName="FechaDoc" readonly>
+                <input type="date" class="form-control" formControlName="FechaDoc" id="FechaDoc" readonly>
               </div>
             </div>
             <div class="row mb-2">
@@ -88,7 +75,7 @@
                 <div class="CamposFonelli">Status</div>
               </div>
               <div class="col-md-4">
-                <input type="text" class="form-control" formControlName="StatusDoc" readonly>
+                <input type="text" class="form-control" formControlName="StatusDoc" id="StatusDoc" readonly>
               </div>
             </div>
           </div> <!-- datos generales del documento -->
@@ -101,15 +88,15 @@
             <div class="row">
               <div class="col-md-2">
                 <label for="" class="CamposFonelli">Línea PT</label>
-                <input type="text" class="form-control" formControlName="LineaPT">
+                <input type="text" class="form-control" formControlName="LineaPT" id="LineaPT">
               </div>
               <div class="col-md-3">
                 <label for="" class="CamposFonelli">Clave del modelo</label>
-                <input type="text" class="form-control" formControlName="ItemCode">
+                <input type="text" class="form-control" formControlName="ItemCode" id="ItemCode">
               </div>
               <div class="col-md-2">
                 <label for="" class="CamposFonelli">Piezas</label>
-                <input type="number" class="form-control" formControlName="Piezas" min="1">
+                <input type="number" class="form-control" formControlName="Piezas" id="Piezas" min="1">
               </div>
               <div class="col-md-2 d-flex align-items-end">
                 <button type="button" class="btn btnFonelliAzul" (click)="AgregarArticulo()"
@@ -128,7 +115,6 @@
     </div> <!-- .card-header -->
 
     <div class="card-body">
-
 
       <!----------------------- Tabla de artículos cotizados  ------------------------>
       <div class="row">
