--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -102,10 +102,12 @@
               data-bs-parent="#menuAsesorAccordion">
               <a mat-list-item [routerLink]="['/asesores/consultaprecios/']" routerLinkActive="active-list-item"><span
                   class="font_side">Consulta de precios</span></a>
-              <a mat-list-item [routerLink]="['/asesores/cotizacion/']" routerLinkActive="active-list-item"><span
-                  class="font_side">Cotización de Ventas</span></a>
               <a mat-list-item [routerLink]="['/asesores/cotizcrear/']" routerLinkActive="active-list-item"><span
                   class="font_side">Crear Cotización</span></a>
+              <!--
+              <a mat-list-item [routerLink]="['/asesores/cotizlista/']" routerLinkActive="active-list-item"><span
+                  class="font_side">Consultar Cotizac</span></a>
+-->
             </div>
           </div>
           <!-- Grupo Pedidos -->
@@ -170,10 +172,12 @@
           <a mat-list-item [routerLink]="['/asesores/articulosreporte/']" routerLinkActive="active-list-item"><span
               class="font_side">Catálogo de Artículos</span></a>
 
-        </div>
+          <!--
+            <a mat-list-item [routerLink]="['/asesores/testdr/']" routerLinkActive="active-list-item"><span
+                class="font_side">Test Cotizaciones</span></a>
+            -->
 
-        <a mat-list-item [routerLink]="['/asesores/testdr/']" routerLinkActive="active-list-item"><span
-            class="font_side">Test Cotizaciones</span></a>
+        </div>
 
       </mat-nav-list>
 
@@ -217,6 +221,11 @@
                 routerLinkActive="active-list-item"><span class="font_side">Consulta de precios</span></a>
               <a mat-list-item [routerLink]="['/distribuidores/cotizacion/']" routerLinkActive="active-list-item"><span
                   class="font_side">Cotización de Ventas</span></a>
+
+
+              <a mat-list-item [routerLink]="['/distribuidores/cotizcrear/']" routerLinkActive="active-list-item"><span
+                  class="font_side">Crear Cotización</span></a>
+
 
             </div>
           </div>
