--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -102,12 +102,12 @@
               data-bs-parent="#menuAsesorAccordion">
               <a mat-list-item [routerLink]="['/asesores/consultaprecios/']" routerLinkActive="active-list-item"><span
                   class="font_side">Consulta de precios</span></a>
+
               <a mat-list-item [routerLink]="['/asesores/cotizcrear/']" routerLinkActive="active-list-item"><span
                   class="font_side">Crear Cotización</span></a>
-              <!--
-              <a mat-list-item [routerLink]="['/asesores/cotizlista/']" routerLinkActive="active-list-item"><span
-                  class="font_side">Consultar Cotizac</span></a>
--->
+              <a mat-list-item [routerLink]="['/asesores/cotizlistar/']" routerLinkActive="active-list-item"><span
+                  class="font_side">Consultar Cotización</span></a>
+
             </div>
           </div>
           <!-- Grupo Pedidos -->
@@ -219,12 +219,14 @@
               data-bs-parent="#menuClienteAccordion">
               <a mat-list-item [routerLink]="['/distribuidores/consultaprecios/']"
                 routerLinkActive="active-list-item"><span class="font_side">Consulta de precios</span></a>
+              <!--  
               <a mat-list-item [routerLink]="['/distribuidores/cotizacion/']" routerLinkActive="active-list-item"><span
                   class="font_side">Cotización de Ventas</span></a>
-
-
+              -->
               <a mat-list-item [routerLink]="['/distribuidores/cotizcrear/']" routerLinkActive="active-list-item"><span
                   class="font_side">Crear Cotización</span></a>
+              <a mat-list-item [routerLink]="['/distribuidores/cotizlistar/']" routerLinkActive="active-list-item"><span
+                  class="font_side">Consultar Cotización</span></a>
 
 
             </div>
