--- a/src/app/components/cotiz-editar/cotiz-editar.component.html
+++ b/src/app/components/cotiz-editar/cotiz-editar.component.html
@@ -61,7 +61,7 @@
               </div>
             </div>
 
-            <div class="row mb-1">
+            <div class="row mb-1" hidden>
               <div class="col-md-6"></div>
               <div class="col-md-2 d-flex justify-content-end align-items-center">
                 <div class="CamposFonelli">ListaPrec</div>
@@ -71,7 +71,7 @@
                   readonly>
               </div>
             </div>
-            <div class="row mb-1">
+            <div class="row mb-1" hidden>
               <div class="col-md-6"></div>
               <div class="col-md-2 d-flex justify-content-end align-items-center">
                 <div class="CamposFonelli">Paridad</div>
@@ -171,6 +171,10 @@
               <span class="h5"><strong>{{ totalDocum | currency }}</strong></span>
             </div>
             <div class="mt-3 d-flex justify-content-end gap-2 no-imprimir">
+              <button type="button" class="btn btnFonelliAzul mt-auto" (click)="descartarPropuesta()">
+                Descartar
+              </button>
+
               <button type="button" class="btn btnFonelliAzul mt-auto" (click)="guardarPropuesta()">
                 Guardar
               </button>
