--- a/src/app/components/cotiz-editar/cotiz-editar.component.html
+++ b/src/app/components/cotiz-editar/cotiz-editar.component.html
@@ -31,6 +31,9 @@
 
           <!--------------------- Folio y Datos generales --------------------->
           <div class="col-md-6">
+            <div class="row mb-1" hidden>
+              <input type="text" class="form-control" formControlName="DocId" id="DocId" readonly>
+            </div>
             <div class="row mb-1">
               <div class="col-md-6">
               </div>
