--- a/src/app/components/articulos-consulta/articulos-consulta.component.css
+++ b/src/app/components/articulos-consulta/articulos-consulta.component.css
@@ -98,3 +98,30 @@ td.FilasFonelli-fecha {
   text-align: center;
   vertical-align: middle;
 }
+
+/* INICIO: NUEVOS ESTILOS PARA LAS IMÁGENES */
+.thumbnail {
+  /* Ancho de la miniatura */
+  width: 42px;
+  height: auto;
+  /* Cambia el cursor para indicar que es clickeable */
+  cursor: pointer;
+  /* Efecto suave al pasar el mouse */
+  transition: transform 0.2s;
+
+  vertical-align: middle;
+}
+
+.thumbnail:hover {
+  transform: scale(1.1);
+  /* Agranda ligeramente la imagen al pasar el mouse */
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+  max-height: 70vh;
+  /* Limita la altura de la imagen en el modal */
+}
+
+/* FIN: NUEVOS ESTILOS PARA LAS IMÁGENES */
