--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,135 +1,134 @@
+<app-header></app-header>
 
-  <app-header></app-header>
+<div class="fondo_fonelli">
 
-  <div class="fondo_fonelli">
-  
-    <ngb-carousel >
- 
-      <ng-template ngbSlide  *ngFor="let banner of oTemplate.BannerPrincipal;">
-        <div class="picsum-img-wrapper">
-          <!--<img [src]="mobileQuery.matches ? '{{banner.UrlImagenMovil + banner.ImagenMovil}}' : '../assets/images/banner_principal/desk/BN3.png'"  style="width: 100%;" >-->
+  <!-- Carrusel Catalogos y Promociones -->
+  <ngb-carousel>
+
+    <ng-template ngbSlide *ngFor="let banner of oTemplate.BannerPrincipal;">
+      <div class="picsum-img-wrapper">
+        <!--<img [src]="mobileQuery.matches ? '{{banner.UrlImagenMovil + banner.ImagenMovil}}' : '../assets/images/banner_principal/desk/BN3.png'"  style="width: 100%;" >-->
         <a [href]="banner?.Link? banner?.Link : 'javascript:void(0);' " [title]="banner?.Titulo? banner?.Titulo : '' ">
-          <img [src]="mobileQuery.matches ? banner?.UrlImagenMovil + banner?.ImagenMovil : banner?.UrlImagen + banner?.Imagen"  style="width: 100%;"  >
+          <img
+            [src]="mobileQuery.matches ? banner?.UrlImagenMovil + banner?.ImagenMovil : banner?.UrlImagen + banner?.Imagen"
+            style="width: 100%;">
         </a>
-        </div>
-        <!-- <div class="carousel-caption">
-          <h3>10 seconds between slides...</h3>
-          <p>This carousel uses customized default values.</p>
-        </div> -->
-      </ng-template>
-  
-    </ngb-carousel>
-  
+      </div>
+      <!-- <div class="carousel-caption">
+             <h3>10 seconds between slides...</h3>
+             <p>This carousel uses customized default values.</p>
+           </div> -->
+    </ng-template>
 
-  
+  </ngb-carousel>
+
+  <!---------- Sección con mosaico de features (3 imagenes) ---------->
   <section class="news section-padding" id="news">
-      <div class="container">
-          <div class="row">
-  
-             
-           
-              <div class="col-12 col-lg-4 border-right border-primary ">
-                <p class="font1">Mas de 8000</p>
-                  <div class="news-thumb">
-                      <a class="news-image-hover news-image-hover-warning">
-                        <img src="{{oTemplate?.Gif?.Url + oTemplate?.Gif?.Imagen1}}" class="img-fluid large-news-image news-image" alt="">
-                      </a>  
-                      <p class="font1">Diseños diferentes.</p>                                                               
-                  </div> 
-                  
-              </div>
-              
-              
-              <div class="col-12 col-lg-4 border-right border-primary ">
-                <p class="font1">600 distribuidores</p>
-                  <div class="news-thumb" >
-                      <a  class="news-image-hover news-image-hover-warning">
-                        <img src="{{oTemplate?.Gif?.Url + oTemplate?.Gif?.Imagen2}}" class="img-fluid large-news-image news-image" alt="">
-                      </a>                                                               
-                      <p class="font1">en todo el país</p>                                                               
-                  </div>  
-              </div>
-  
-              <div class="col-12 col-lg-4 ">
-                <p class="font1">Presencia en más de</p>
-                  <div class="news-thumb" >
-                      
-                      <a class="news-image-hover news-image-hover-warning">
-                        <img src="{{oTemplate?.Gif?.Url + oTemplate?.Gif?.Imagen3}}" class="img-fluid large-news-image news-image" alt="">
-                      </a>                                            
-                      <p class="font1">2000 puntos de venta</p>                                                                                
-                  </div> 
-              </div>
-              
+    <div class="container">
+      <div class="row">
+
+        <div class="col-12 col-lg-4 border-right border-primary ">
+          <p class="font1">Mas de 8000</p>
+          <div class="news-thumb">
+            <a class="news-image-hover news-image-hover-warning">
+              <img src="{{oTemplate?.Gif?.Url + oTemplate?.Gif?.Imagen1}}" class="img-fluid large-news-image news-image"
+                alt="">
+            </a>
+            <p class="font1">Diseños diferentes.</p>
           </div>
+        </div>
+
+        <div class="col-12 col-lg-4 border-right border-primary ">
+          <p class="font1">600 distribuidores</p>
+          <div class="news-thumb">
+            <a class="news-image-hover news-image-hover-warning">
+              <img src="{{oTemplate?.Gif?.Url + oTemplate?.Gif?.Imagen2}}" class="img-fluid large-news-image news-image"
+                alt="">
+            </a>
+            <p class="font1">en todo el país</p>
+          </div>
+        </div>
+
+        <div class="col-12 col-lg-4 ">
+          <p class="font1">Presencia en más de</p>
+          <div class="news-thumb">
+
+            <a class="news-image-hover news-image-hover-warning">
+              <img src="{{oTemplate?.Gif?.Url + oTemplate?.Gif?.Imagen3}}" class="img-fluid large-news-image news-image"
+                alt="">
+            </a>
+            <p class="font1">2000 puntos de venta</p>
+          </div>
+        </div>
+
       </div>
-  </section>
-  
+    </div>
+  </section> <!-- Fin sección features -->
+
+  <!---------- Seccion NOSOTROS 
   <section class="section-padding pb-0" id="about">
-      <div class="container mb-5 pb-lg-5">
-          <div class="row">
-              <div class="col-12">
-                  <h2 class="mb-3" data-aos="fade-up"  >NOSOTROS</h2>
+    <div class="container mb-5 pb-lg-5">
+
+      <div class="row">
+        <div class="col-12">
+          <h2 class="mb-3" data-aos="fade-up">NOSOTROS</h2>
+        </div>
+
+        ---------- Texto sección Nosotros ----------
+        <div class="col-lg-6 col-12 mt-3 mb-lg-5">
+          <p class="me-4 font_nosotros" data-aos-delay="300" data-aos="fade-up"
+            [innerHTML]=" oTemplate?.Nosotros?.Texto"> </p>
+        </div>
+
+        ---------- Imagenes sección Nosotros ----------
+        <div class="col-lg-6 col-12 mt-lg-3 mb-lg-5">
+          <div class="images_main">
+            <div [class]="mobileQuery.matches ? '' : 'images_left'">
+              <div class="container_1">
+                <img src="{{ oTemplate?.Nosotros?.Url + oTemplate?.Nosotros?.Imagen1}}" alt="Avatar" class="rounded"
+                  style="width:100%">
+                <div class="middle">
+                  -- <div class="text"><img src="images/search-icon.png"></div> -- linea comentada
+                </div>
               </div>
-  
-              <div class="col-lg-6 col-12 mt-3 mb-lg-5">
-                <p class="me-4 font_nosotros"  data-aos-delay="300" data-aos="fade-up" [innerHTML]=" oTemplate?.Nosotros?.Texto"> </p>
-             </div>
-  
-              <div class="col-lg-6 col-12 mt-lg-3 mb-lg-5">
-                  <!-- <img src="../../../assets/images/principal/trabajos.png" class="img-fluid news-image" alt=""> -->
-                  <div class="images_main" >
-                      <div [class]="mobileQuery.matches ? '' : 'images_left'"  >
-                        <div class="container_1">
-                          <img src="{{ oTemplate?.Nosotros?.Url + oTemplate?.Nosotros?.Imagen1}}"  alt="Avatar" class="rounded" style="width:100%">
-                          <div class="middle">
-                            <!-- <div class="text"><img src="images/search-icon.png"></div> -->
-                            
-                          </div>
-                        </div>
-                        <br>
-                        <div class="container_1">
-                          <img src="{{ oTemplate?.Nosotros?.Url + oTemplate?.Nosotros?.Imagen2}}" alt="Avatar" class="rounded" style="width:100%">
-            
-                        </div>
-                      </div>
-                      <div [class]="mobileQuery.matches ? '' : 'images_right'"  >
-                        <div class="container_1">
-                          <img src="{{ oTemplate?.Nosotros?.Url + oTemplate?.Nosotros?.Imagen3}}" alt="Avatar" class="rounded" style="width:100%">
-                          <div class="middle">
-                            <br>
-                         
-                          </div>
-                        </div>
-                        <div class="container_1">
-                          <img src="{{ oTemplate?.Nosotros?.Url + oTemplate?.Nosotros?.Imagen4}}" alt="Avatar" class="rounded" style="width:100%">
-                          <div class="middle">
-                            <br>
-                       
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+              <br>
+              <div class="container_1">
+                <img src="{{ oTemplate?.Nosotros?.Url + oTemplate?.Nosotros?.Imagen2}}" alt="Avatar" class="rounded"
+                  style="width:100%">
               </div>
-  
+            </div>
+            <div [class]="mobileQuery.matches ? '' : 'images_right'">
+              <div class="container_1">
+                <img src="{{ oTemplate?.Nosotros?.Url + oTemplate?.Nosotros?.Imagen3}}" alt="Avatar" class="rounded"
+                  style="width:100%">
+                <div class="middle">
+                  <br>
+                </div>
+              </div>
+              <div class="container_1">
+                <img src="{{ oTemplate?.Nosotros?.Url + oTemplate?.Nosotros?.Imagen4}}" alt="Avatar" class="rounded"
+                  style="width:100%">
+                <div class="middle">
+                  <br>
+                </div>
+              </div>
+            </div>
           </div>
+        </div>
       </div>
-  
-      
-  </section>
-  
-  
-  
-  
+    </div>
+  </section> -- Fin sección NOSOTROS --->
+
+  <!---------- Imagen final ---------->
   <div style="width: 100%">
-    <img src="{{ oTemplate?.ImagenFinal?.Url +  oTemplate?.ImagenFinal?.Imagen}}" class="img-fluid news-image" style="width: 100%">   
-</div>
-  
+    <img src="{{ oTemplate?.ImagenFinal?.Url +  oTemplate?.ImagenFinal?.Imagen}}" class="img-fluid news-image"
+      style="width: 100%">
+  </div>
+
   <!-- <div style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=5%20de%20febrero%20No.%20442%20Planta%20Baja,%20interior%20A,%20Algar%C3%ADn,%2006880%20Ciudad%20de%20M%C3%A9xico,%20CDMX+(Fonelli)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">Car Navigation Systems</a></iframe></div>  -->
 
+  <!-- </div> -->
 
-<!-- </div> -->
+</div> <!-- .fondo_fonelli -->
 
-
-</div>
 <app-footer></app-footer>
