--- a/src/assets/css/templatemo-nomad-force.css
+++ b/src/assets/css/templatemo-nomad-force.css
@@ -10,31 +10,31 @@ https://templatemo.com/tm-567-nomad-force
   CUSTOM PROPERTIES ( VARIABLES )             
 -----------------------------------------*/
 :root {
-  --white-color:                  #FFFFFF;
-  --primary-color:                #183e6f;
-  --section-bg-color:             #f9f9f9;
-  --dark-color:                   #183e6f;
-  --grey-color:                   #fcfeff;
-  --text-secondary-white-color:   rgba(255, 255, 255, 0.98);
-  --title-color:                  #565758;
-  --p-color:                      #717275;
+  --white-color: #FFFFFF;
+  --primary-color: #183e6f;
+  --section-bg-color: #f9f9f9;
+  --dark-color: #183e6f;
+  --grey-color: #fcfeff;
+  --text-secondary-white-color: rgba(255, 255, 255, 0.98);
+  --title-color: #565758;
+  --p-color: #717275;
 
-  --body-font-family:           'Noto Sans JP', sans-serif;
+  --body-font-family: 'Noto Sans JP', sans-serif;
 
-  --h1-font-size:               72px;
-  --h2-font-size:               42px;
-  --h3-font-size:               36px;
-  --h4-font-size:               32px;
-  --h5-font-size:               24px;
-  --h6-font-size:               22px;
-  --p-font-size:                20px;
-  --copyright-text-font-size:   14px;
-  --custom-link-font-size:      12px;
+  --h1-font-size: 72px;
+  --h2-font-size: 42px;
+  --h3-font-size: 36px;
+  --h4-font-size: 32px;
+  --h5-font-size: 24px;
+  --h6-font-size: 22px;
+  --p-font-size: 20px;
+  --copyright-text-font-size: 14px;
+  --custom-link-font-size: 12px;
 
-  --font-weight-light:          300;
-  --font-weight-normal:         400;
-  --font-weight-bold:           700;
-  --font-weight-black:          900;
+  --font-weight-light: 300;
+  --font-weight-normal: 400;
+  --font-weight-bold: 700;
+  --font-weight-black: 900;
 }
 
 body,
@@ -43,9 +43,9 @@ html {
 }
 
 body {
-    background: var(--white-color);
-    font-family: var(--body-font-family);    
-    position: relative;
+  background: var(--white-color);
+  font-family: var(--body-font-family);
+  position: relative;
 }
 
 /*---------------------------------------
@@ -112,7 +112,7 @@ p {
   color: var(--text-secondary-white-color);
 }
 
-a, 
+a,
 button {
   touch-action: manipulation;
   transition: all 0.3s;
@@ -140,7 +140,8 @@ a:hover {
 
 .videoWrapper {
   position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
+  padding-bottom: 56.25%;
+  /* padding-bottom: 16:9 */
   height: 0;
   z-index: -100;
 }
@@ -174,7 +175,7 @@ a:hover {
   overflow: hidden;
   z-index: 1;
   display: inline-block;
-  transition: all .3s cubic-bezier(.645,.045,.355,1);
+  transition: all .3s cubic-bezier(.645, .045, .355, 1);
 }
 
 .custom-link::after {
@@ -186,7 +187,7 @@ a:hover {
   left: auto;
   right: 0;
   z-index: -1;
-  transition: width .6s cubic-bezier(.25,.8,.25,1) 0s;
+  transition: width .6s cubic-bezier(.25, .8, .25, 1) 0s;
   background: currentColor;
 }
 
@@ -268,7 +269,7 @@ strong {
 }
 
 .navbar-nav .nav-item.active .nav-link,
-.nav-link:focus, 
+.nav-link:focus,
 .nav-link:hover {
   color: var(--dark-color);
 }
@@ -353,7 +354,7 @@ strong {
 
 @media screen and (min-width: 992px) {
   .hero {
-    height: 100vh;
+    height: 92vh;
   }
 
   .custom-video,
@@ -400,7 +401,7 @@ strong {
   padding: 22px 32px 32px 32px;
 }
 
-.carousel-control-next, 
+.carousel-control-next,
 .carousel-control-prev {
   top: auto;
   bottom: 2.5rem;
@@ -411,7 +412,7 @@ strong {
   left: auto;
 }
 
-.carousel-control-next-icon, 
+.carousel-control-next-icon,
 .carousel-control-prev-icon {
   background-color: var(--dark-color);
   background-size: 50% 50%;
@@ -484,7 +485,7 @@ strong {
   position: relative;
   overflow: hidden;
   z-index: 1;
-  transition: all .3s cubic-bezier(.645,.045,.355,1);
+  transition: all .3s cubic-bezier(.645, .045, .355, 1);
   padding-bottom: 4px;
   height: 100%;
 }
@@ -498,7 +499,7 @@ strong {
   left: auto;
   right: 0;
   z-index: -1;
-  transition: width .6s cubic-bezier(.25,.8,.25,1) 0s;
+  transition: width .6s cubic-bezier(.25, .8, .25, 1) 0s;
   background: #198754;
 }
 
@@ -538,7 +539,7 @@ strong {
 }
 
 .social-share-link,
-.social-share-link + span {
+.social-share-link+span {
   color: rgba(255, 255, 255, 0.65);
 }
 
@@ -577,7 +578,7 @@ strong {
 
 .contact-form button[type='submit']:hover {
   background: var(--primary-color);
-  
+
 }
 
 .form-label {
@@ -590,16 +591,16 @@ strong {
   filter: grayscale(100);
 }
 
- label.classy {
-  color: white;  
-} 
+label.classy {
+  color: white;
+}
 
 label.title {
-  color: white;  
+  color: white;
   text-align: center;
-  display:block;
-  margin:auto;
-} 
+  display: block;
+  margin: auto;
+}
 
 
 /*---------------------------------------
@@ -737,28 +738,32 @@ label.title {
 }
 
 .cat {
-  height:50px ; 
-  padding-left:30px;
- }
- .pie {
-  height:20px ; 
-  margin-top: 2px;
- }
- img {
-  min-height: 100%; 
-  max-height: 100%; 
-  display:block;
-  margin: auto;
- }
+  height: 50px;
+  padding-left: 30px;
+}
 
- .images_main{
+.pie {
+  height: 20px;
+  margin-top: 2px;
+}
+
+img {
+  min-height: 100%;
+  max-height: 100%;
+  display: block;
+  margin: auto;
+}
+
+.images_main {
   width: 100%;
   float: left;
 }
-.images_left{
+
+.images_left {
   width: 50%;
   float: left;
 }
+
 .images_right {
   width: 47%;
   float: left;
@@ -768,7 +773,7 @@ label.title {
 
 .container_1:hover .image {
   opacity: 0.3;
-  background-color: rgb(71.0.5.9.5)!important;
+  background-color: rgb(71.0.5.9.5) !important;
 
 }
 
@@ -780,7 +785,7 @@ label.title {
 span {
   color: red;
   font-size: auto;
-} 
+}
 
 button.btnFonelli {
   background-color: #c3cfd9;
@@ -803,8 +808,9 @@ button.btnFonelliAzul {
 label.CamposFonelli {
   color: #183e6f;
   font-family: Quicksand-SemiBold;
-  font-size: medium;  
+  font-size: medium;
 }
+
 label.LabelNegritas {
   color: #183e6f;
   font-family: Quicksand-Bold;
@@ -832,24 +838,24 @@ label.CamposGeneral {
   color: #183e6f;
   font-family: Quicksand-SemiBold;
   font-weight: bold;
-  
+
 }
 
 tr.EncTabla {
   background-color: #24a4cc;
   color: #ffffff;
-  font-family: Quicksand-bold;    
+  font-family: Quicksand-bold;
 }
 
 td.FilasFonelli {
   color: #000000;
-  font-family: Quicksand-SemiBold;    
+  font-family: Quicksand-SemiBold;
 }
 
 td.FilasFonBold {
   color: #000000;
-  font-family: Quicksand-Bold;   
-  font-weight: bold; 
+  font-family: Quicksand-Bold;
+  font-weight: bold;
 }
 
 h2.TituloFonelli {
@@ -857,15 +863,15 @@ h2.TituloFonelli {
   font-family: Futura_Condensed_Extra_Bold;
 }
 
-.size{
-  width:100px;
+.size {
+  width: 100px;
 }
 
 .anyClass {
   /* height:768px;
   width: 1366px;  */
-  height:384px;
-  width: 1366px; 
+  height: 384px;
+  width: 1366px;
   overflow-y: scroll;
 }
 
@@ -896,4 +902,5 @@ button.btnExcel {
   margin-bottom: 14px;
   margin-left: 40px;
 }
+
 /* ----------------------------------------- */
