Componente para mostrar Mapa de Distribuidores sobresalientes
Creación del componente y artefactos asociadas para mostrar en un mapa las ubicaciones de los distribuidores sobresalientes de Fonelli.
Se usa la API de google-maps

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -43,6 +43,9 @@
           <a class="nav-link" href="#about">Nosotros</a>
         </li>
         -->
+        <li class="nav-item active">
+          <a class="nav-link" href="#mapa-distrib">Puntos de Venta</a>
+        </li>
 
         <li class="nav-item">
           <!--<a class="nav-link" href="#about">Our Studio</a>-->
@@ -77,6 +80,9 @@
           <a class="nav-link" href="#about">Nosotros</a>
         </li>
         -->
+        <li class="nav-item active">
+          <a class="nav-link" href="#mapa-distrib">Puntos de Venta</a>
+        </li>
 
         <li class="nav-item">
           <a class="nav-link" href="https://fonelli.com/">Tienda en linea</a>
@@ -252,6 +258,13 @@
         </div>
         <!-- <div class="container">
                 <div class="row"> -->
+        <div class="form-group">
+          <label class="classy fs-5 text-center">Si quieres iniciar como distribuidor Fonelli llena el siguiente
+            formulario</label>
+          <br />
+        </div>
+
+
         <div class="form-group">
           <label class="classy" for="nombre">Nombre</label><br />
           <input class="form-control" type="text" name="nombre" #nombre="ngModel" [(ngModel)]="ModeloContacto.Nombre"
