--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
 
 <div class="fondo_fonelli">
 
-  <!-- Carrusel Catalogos y Promociones -->
+  <!---------- Carrusel Catalogos y Promociones ---------->
   <ngb-carousel>
 
     <ng-template ngbSlide *ngFor="let banner of oTemplate.BannerPrincipal;">
@@ -65,6 +65,13 @@
     </div>
   </section> <!-- Fin sección features -->
 
+  <!---------- Sección para mostrar mapa con ubicación de distribuidores drendon 10.11.2025 ------------>
+  <section id="mapa-distrib" style="padding-bottom: 1rem;">
+
+    <app-mapa-distrib></app-mapa-distrib>
+
+  </section> <!-- Fin sección mapa-distrib -->
+
   <!---------- Seccion NOSOTROS 
   <section class="section-padding pb-0" id="about">
     <div class="container mb-5 pb-lg-5">
@@ -119,14 +126,22 @@
     </div>
   </section> -- Fin sección NOSOTROS --->
 
+  <hr>
+
   <!---------- Imagen final ---------->
-  <div style="width: 100%">
+  <!--
+  <div style="width: 100%; height: 300px">
     <img src="{{ oTemplate?.ImagenFinal?.Url +  oTemplate?.ImagenFinal?.Imagen}}" class="img-fluid news-image"
-      style="width: 100%">
+      style="width: 100%; object-fit: cover;">
+  </div>
+-->
+  <div class="imagen-final-contenedor">
+    <img src="{{ oTemplate?.ImagenFinal?.Url + oTemplate?.ImagenFinal?.Imagen }}" class="img-fluid"
+      style="width: 100%; object-fit: cover;">
   </div>
 
-  <!-- <div style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=5%20de%20febrero%20No.%20442%20Planta%20Baja,%20interior%20A,%20Algar%C3%ADn,%2006880%20Ciudad%20de%20M%C3%A9xico,%20CDMX+(Fonelli)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">Car Navigation Systems</a></iframe></div>  -->
 
+  <!-- <div style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=5%20de%20febrero%20No.%20442%20Planta%20Baja,%20interior%20A,%20Algar%C3%ADn,%2006880%20Ciudad%20de%20M%C3%A9xico,%20CDMX+(Fonelli)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">Car Navigation Systems</a></iframe></div>  -->
   <!-- </div> -->
 
 </div> <!-- .fondo_fonelli -->
