--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -28,36 +28,36 @@
       <div class="row">
 
         <div class="col-12 col-lg-4 border-right border-primary ">
-          <p class="font1">Mas de 8000</p>
+          <p class="font1 text-center">Más de 30,000</p>
           <div class="news-thumb">
             <a class="news-image-hover news-image-hover-warning">
               <img src="{{oTemplate?.Gif?.Url + oTemplate?.Gif?.Imagen1}}" class="img-fluid large-news-image news-image"
                 alt="">
             </a>
-            <p class="font1">Diseños diferentes.</p>
+            <p class="font1 text-center">Diseños diferentes.</p>
           </div>
         </div>
 
         <div class="col-12 col-lg-4 border-right border-primary ">
-          <p class="font1">600 distribuidores</p>
+          <p class="font1 text-center">600 distribuidores</p>
           <div class="news-thumb">
             <a class="news-image-hover news-image-hover-warning">
               <img src="{{oTemplate?.Gif?.Url + oTemplate?.Gif?.Imagen2}}" class="img-fluid large-news-image news-image"
                 alt="">
             </a>
-            <p class="font1">en todo el país</p>
+            <p class="font1 text-center">en todo el país</p>
           </div>
         </div>
 
         <div class="col-12 col-lg-4 ">
-          <p class="font1">Presencia en más de</p>
+          <p class="font1 text-center">Presencia en más de</p>
           <div class="news-thumb">
 
             <a class="news-image-hover news-image-hover-warning">
               <img src="{{oTemplate?.Gif?.Url + oTemplate?.Gif?.Imagen3}}" class="img-fluid large-news-image news-image"
                 alt="">
             </a>
-            <p class="font1">2000 puntos de venta</p>
+            <p class="font1 text-center">2,000 puntos de venta</p>
           </div>
         </div>
 
@@ -66,11 +66,12 @@
   </section> <!-- Fin sección features -->
 
   <!---------- Sección para mostrar mapa con ubicación de distribuidores drendon 10.11.2025 ------------>
-  <section id="mapa-distrib" style="padding-bottom: 1rem;">
-
+  <section id="mapa-distrib">
+    <hr>
     <app-mapa-distrib></app-mapa-distrib>
-
+    <hr>
   </section> <!-- Fin sección mapa-distrib -->
+
 
   <!---------- Seccion NOSOTROS 
   <section class="section-padding pb-0" id="about">
@@ -126,7 +127,6 @@
     </div>
   </section> -- Fin sección NOSOTROS --->
 
-  <hr>
 
   <!---------- Imagen final ---------->
   <!--
@@ -134,12 +134,11 @@
     <img src="{{ oTemplate?.ImagenFinal?.Url +  oTemplate?.ImagenFinal?.Imagen}}" class="img-fluid news-image"
       style="width: 100%; object-fit: cover;">
   </div>
--->
+   -->
   <div class="imagen-final-contenedor">
     <img src="{{ oTemplate?.ImagenFinal?.Url + oTemplate?.ImagenFinal?.Imagen }}" class="img-fluid"
-      style="width: 100%; object-fit: cover;">
+      style="width: 100%; height: 100%; object-fit: cover">
   </div>
-
 
   <!-- <div style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=5%20de%20febrero%20No.%20442%20Planta%20Baja,%20interior%20A,%20Algar%C3%ADn,%2006880%20Ciudad%20de%20M%C3%A9xico,%20CDMX+(Fonelli)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">Car Navigation Systems</a></iframe></div>  -->
   <!-- </div> -->
