--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,8 @@
     <div class="footer">
         <ul class="footer-list">
             <li class="footer-list-item">
-                <a href="https://www.facebook.com/fonelli.joyeria" class="social-icon-link ">
+                <a href="https://www.facebook.com/fonelli.joyeria" class="social-icon-link" target="_blank"
+                    rel="noopener noreferrer">
                     <div class="pie">
                         <img src="../assets/images/redes/face.png">
                     </div>
@@ -10,7 +11,8 @@
             </li>
 
             <li class="footer-list-item">
-                <a href="https://www.instagram.com/fonelli.joyeria/" class="social-icon-link ">
+                <a href="https://www.instagram.com/fonelli.joyeria/" class="social-icon-link" target="_blank"
+                    rel="noopener noreferrer">
                     <div class="pie">
                         <img src="../assets/images/redes/insta.png">
                     </div>
@@ -18,7 +20,8 @@
             </li>
 
             <li class="footer-list-item">
-                <a href="https://www.linkedin.com/company/joyeria-fonelli" class="social-icon-link ">
+                <a href="https://mx.linkedin.com/company/joyeria-fonelli" class="social-icon-link" target="_blank"
+                    rel="noopener noreferrer">
                     <div class="pie">
                         <img src="../assets/images/redes/Lin.png">
                     </div>
@@ -26,13 +29,22 @@
             </li>
 
             <li class="footer-list-item">
-                <a href="https://www.tiktok.com/@fonelli.joyeria" class="social-icon-link ">
+                <a href="https://www.tiktok.com/@fonelli.joyeria" class="social-icon-link" target="_blank"
+                    rel="noopener noreferrer">
                     <div class="pie">
                         <img src="../assets/images/redes/Tik.png">
                     </div>
                 </a>
             </li>
 
+            <li class="footer-list-item">
+                <a href="https://mx.pinterest.com/fonellicom/" class="social-icon-link" target="_blank"
+                    rel="noopener noreferrer">
+                    <div class="pie">
+                        <img src="../assets/images/redes/pinterest.png">
+                    </div>
+                </a>
+            </li>
         </ul>
 
     </div>
