--- a/src/app/components/mapa-distrib/mapa-distrib.component.html
+++ b/src/app/components/mapa-distrib/mapa-distrib.component.html
@@ -33,6 +33,7 @@
       <div class="controls-section mb-3">
         <p class="h5 text-center" style="color: #24a4cc;"><strong>Puntos de Venta</strong></p>
 
+        <!--
         <div class="d-flex justify-content-center align-items-center mb-3">
           <button class="btn" (click)="centerOnUserLocation()" title="Mi ubicación">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-geo-alt-fill"
@@ -41,6 +42,28 @@
             </svg>
             <span class="d-md-inline ms-2" style="color: #183e6f;"><strong>Mi ubicación</strong></span>
           </button>
+        </div>
+        -->
+
+        <div class="d-flex justify-content-center mb-3">
+          <button class="btn" (click)="centerOnUserLocation()" title="Mi ubicación">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+              <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+            </svg>
+            <span class="d-none d-md-inline ms-2" style="color: #183e6f;">Mi ubicación</span>
+          </button>
+
+          <!-- ### NUEVO BOTÓN ### -->
+          <button class="btn ms-2" (click)="resetMapView()" title="Ver todos los distribuidores">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              class="bi bi-arrows-fullscreen" viewBox="0 0 16 16">
+              <path fill-rule="evenodd"
+                d="M5.828 10.172a.5.5 0 0 0-.707 0l-4.096 4.096V11.5a.5.5 0 0 0-1 0v3.975a.5.5 0 0 0 .5.5H4.5a.5.5 0 0 0 0-1H1.732l4.096-4.096a.5.5 0 0 0 0-.707zm4.344 0a.5.5 0 0 1 .707 0l4.096 4.096V11.5a.5.5 0 1 1 1 0v3.975a.5.5 0 0 1-.5.5H11.5a.5.5 0 0 1 0-1h2.768l-4.096-4.096a.5.5 0 0 1 0-.707zm0-4.344a.5.5 0 0 0 .707 0l4.096-4.096V4.5a.5.5 0 1 0 1 0V.525a.5.5 0 0 0-.5-.5H11.5a.5.5 0 0 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 0 .707zm-4.344 0a.5.5 0 0 1-.707 0L1.025 1.732V4.5a.5.5 0 0 1-1 0V.525a.5.5 0 0 1 .5-.5H4.5a.5.5 0 0 1 0 1H1.732l4.096 4.096a.5.5 0 0 1 0 .707z" />
+            </svg>
+            <span class="d-none d-md-inline ms-2" style="color: #183e6f;">Vista completa</span>
+          </button>
+          <!-- ### FIN DEL NUEVO BOTÓN ### -->
         </div>
 
         <div class="input-group">
@@ -68,7 +91,9 @@
             <div class="fw-bold" style="color: #24a4cc;">{{ distribuidor.nombre }}</div>
             <small class="d-block">{{ distribuidor.ciudad }}, {{ distribuidor.entidad }}</small>
             <small class="d-block text-muted">{{ distribuidor.domicilio }}</small>
-            <small class="d-block">Tel: {{ distribuidor.telefono }}</small>
+            <small class="d-block" *ngIf="distribuidor.telefono && distribuidor.telefono.trim() !== ''">
+              Tel: {{ distribuidor.telefono }}
+            </small>
           </a>
         </ng-container>
 
