Scaffolding y preparación inicial

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -172,6 +172,11 @@
           <a mat-list-item [routerLink]="['/asesores/articulosreporte/']" routerLinkActive="active-list-item"><span
               class="font_side">Catálogo de Artículos</span></a>
 
+
+          <a mat-list-item [routerLink]="['/asesores/articulosimagenes/']" routerLinkActive="active-list-item"><span
+              class="font_side">Test Artic con Imagen</span></a>
+
+
         </div>
 
       </mat-nav-list>
